fix:Changed colour opacity to lower value for better contrast ratio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     width: 100%;
     height: 100vh;
     color: #fff;
-    background: radial-gradient(rgb(7, 34, 34), #000);
+    background: radial-gradient(#014040, #000);
 }
 h2 {
     font-family: 'Cormorant', sans-serif;
@@ -208,19 +208,19 @@ input {
 /* Home Page Styling */
 /* Highlight sections */
 .section-bg-c1 {
-    background-color: rgba(15, 116, 146, 0.3);
+    background-color: rgba(15, 116, 146, 0.2);
 }
 
 .section-bg-c2 {
-    background-color: rgba(15, 122, 20, 0.3);
+    background-color: rgba(15, 122, 20, 0.2);
 }
 
 .section-bg-c3 {
-    background-color: rgb(138, 100, 10, 0.3);
+    background-color: rgb(138, 100, 10, 0.2);
 }
 
 .section-bg-c4 {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .feature-image {
